--- a/mediaquery.css
+++ b/mediaquery.css
@@ -3,14 +3,23 @@
 @media screen and (min-width: 280px) and (max-width: 500px) {
 
 
+header {
+    width: 220px;
+}
+nav {
+   width: 230px;
+}
+body, html {
+    width: 400px;
+}
 #img1 {
-    width: 260px;
+    width: 200px;
 }
 #img2 {
-    width: 260px;
+    width: 200px;
 }
 #img3 {
-    width: 260px;
+    width: 200px;
 }
 body {
     background-color: blue;
