--- a/mediaquery.css
+++ b/mediaquery.css
@@ -1,30 +1,31 @@
 @charset "UTF-8";
 
-@media screen and (min-width: 280px) and (max-width: 600px) {
+@media screen and (min-width: 280px) and (max-width: 480px) {
 
 
 header {
-    width: 450px;
+    width: 400px;
 }
 nav {
-   width: 450px;
+   width: 300px;
 }
-
+html {
+    width: 400px;
 }
 body {
-    width: 550px;
+    width: 250px;
 }
 #img1 {
-    width: 193px;
+    width: 150px;
 }
 #img2 {
     width: 193px;
 }
 #img3 {
-    width: 193px;
+    width: 250px;
 }
 #img4 {
-    width: 193px;
+    width: 250px;
 }
 
 }
